@@ -1,10 +1,10 @@
 {
     "name": "ConstructionPlannerContinued",
     "version": "999.999.999",
-    "title": "Construction Planner Continued",
+    "title": "Construction Approvals",
     "author": "azaghal",
     "homepage": "https://github.com/azaghal/Factorio-ConstructionPlannerContinued",
-    "description": "Ghosts require player's approval before construction bots are dispatched. This gives the player improved control over what parts of the factory get built, and when.",
+    "description": "Entity ghosts require player approval before construction bots are dispatched. This gives the player improved control over what parts of the factory get built, and when.",
     "factorio_version": "2.0",
     "dependencies": [
         "base >= 2.0.7",
