@@ -1,3 +1,3 @@
 [controls]
 give-construction-planner=Make new construction planner
-toggle-auto-approve=Toggle auto-approval (Construction Planner)
+toggle-auto-approve=Toggle auto-approval
