@@ -1,8 +1,8 @@
 [item-group-name]
-unapproved-entities=Ghost Placeholders (Construction Planner)
+unapproved-entities=Ghost Placeholders (Construction Approvals)
 
 [item-name]
-construction-planner=Construction Planner
+construction-planner=Construction planner
 
 [item-description]
 construction-planner=Approve/unapprove ghost entities for construction
