@@ -1,5 +1,5 @@
 [warning]
-cp-cleanup-command-confirm=[color=yellow][WARNING][/color] Please re-run the cp_cleanup command within 10 seconds to start the clean-up process. Make sure you have saved and backed-up the savegame before continuing in case something goes wrong.
-cp-cleanup-command-started=[color=yellow][WARNING][/color] Clean-up command is running for construction planner to fix eventual inconsistencies.
-cp-cleanup-command-finished=[color=yellow][WARNING][/color] Clean-up command for construction planner has finished running. Should you detect inconsistencies or missing ghosts, please restore game from a backup, and file a bug report.
-cp-failed-force-paste=[color=yellow][WARNING][/color] Construction planner continued: Failed to place an unapproved ghost (__1__). If you are able to reproduce the issue, please report reproduction steps on mod's discussion pages.
+ca-cleanup-command-confirm=[color=yellow][WARNING][/color] Please re-run the ca_cleanup command within 10 seconds to start the clean-up process. Make sure you have saved and backed-up the savegame before continuing in case something goes wrong.
+ca-cleanup-command-started=[color=yellow][WARNING][/color] Clean-up command is running for Construction Approvals to fix eventual inconsistencies.
+ca-cleanup-command-finished=[color=yellow][WARNING][/color] Clean-up command for Construction Approvals has finished running. Should you detect inconsistencies or missing ghosts, please restore game from a backup, and file a bug report.
+ca-failed-force-paste=[color=yellow][WARNING][/color] Construction Approvals: Failed to place an unapproved ghost (__1__). If you are able to reproduce the issue, please report reproduction steps on mod's discussion pages.
