@@ -1,5 +1,5 @@
 [mod-name]
-ConstructionPlanner=Construction Planner
+ConstructionPlannerContinued=Construction Approvals
 
 [mod-setting-name]
 constructionPlanner-auto-approve=Auto-approve new ghosts
