@@ -3,5 +3,5 @@ give-construction-planner=Construction Planner
 toggle-auto-approve=Toggle auto-approval of new ghosts
 
 [shortcut-description]
-give-construction-planner=Marks items for construction by construction robots (Construction Planner)
-toggle-auto-approve=Toggles the mod setting for auto-approval of newly created ghosts (Construction Planner)
+give-construction-planner=Approves/unapproves construction of ghost entities (Construction Approvals).
+toggle-auto-approve=Toggles automatic construction approval of newly created ghosts (Construction Approvals).
